--- a/app/src/main/res/layout/activity_add_new_money_moving.xml
+++ b/app/src/main/res/layout/activity_add_new_money_moving.xml
@@ -24,7 +24,7 @@
             android:id="@+id/incomingMoney_radio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="RadioButton"
+            android:text="приход"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,7 +32,7 @@
             android:id="@+id/costMoney_radio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="RadioButton"
+            android:text="расход"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
