--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,14 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+    <style name="MainButtons" parent="WrapContent_WrapContent">
+        <item name="android:layout_weight">1</item>
+<item name="android:layout_margin">@dimen/normalMargin</item>
+    </style>
+    <style name="WrapContent_WrapContent">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 </resources>
