--- a/app/src/main/res/layout/activity_add_new_money_moving.xml
+++ b/app/src/main/res/layout/activity_add_new_money_moving.xml
@@ -10,49 +10,79 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="добавление"
+        android:gravity="center"
+        android:text="@string/addingNewMoneyMove_text"
+        android:textSize="@dimen/H1"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="500dp"
+        android:layout_marginTop="@dimen/normalMargin"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints">
 
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <RadioButton
-            android:id="@+id/incomingMoney_radio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="приход"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                 >
 
-        <RadioButton
-            android:id="@+id/costMoney_radio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="расход"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
+                <RadioButton
+                    android:id="@+id/incomingMoney_radio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/tripleMargin"
+                    android:layout_marginTop="@dimen/doubleMargin"
+                    android:layout_weight="1"
+                    android:text="приход"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <RadioButton
+                    android:id="@+id/costMoney_radio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/doubleMargin"
+                    android:layout_weight="1"
+                    android:text="расход"
+                    app:layout_constraintStart_toEndOf="@+id/incomingMoney_radio"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </RadioGroup>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="на что"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.18"
+            android:gravity="center"
+            android:text="@string/description_text"
+            android:textSize="@dimen/H2"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
             tools:layout_editor_absoluteX="16dp" />
 
         <EditText
-            android:background="#858585"
+            android:padding="@dimen/doubleMargin"
+            android:gravity="start"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/doubleMargin"
+            android:background="@color/cardview_dark_background"
+            app:layout_constraintBottom_toTopOf="@+id/addingInBase_button"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            android:hint="@string/description_editText"/>
 
         <Button
+            android:text="@string/addingNewMoneyMove_text"
             android:id="@+id/addingInBase_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
