--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="tripleMargin">24dp</dimen>
     <dimen name="doubleMargin">16dp</dimen>
     <dimen name="normalMargin">8dp</dimen>
+    <dimen name="H1">24sp</dimen>
+    <dimen name="H2">18sp</dimen>
 </resources>
