--- a/app/src/main/res/layout/activity_add_new_money_moving.xml
+++ b/app/src/main/res/layout/activity_add_new_money_moving.xml
@@ -71,15 +71,29 @@
             tools:layout_editor_absoluteX="16dp" />
 
         <EditText
-            android:padding="@dimen/doubleMargin"
-            android:gravity="start"
+            android:id="@+id/description_et"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="@dimen/doubleMargin"
             android:background="@color/cardview_dark_background"
-            app:layout_constraintBottom_toTopOf="@+id/addingInBase_button"
+            android:gravity="start"
+            android:hint="@string/description_editText"
+            android:padding="@dimen/doubleMargin"
+
+            app:layout_constraintBottom_toTopOf="@+id/sum_et"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
-            android:hint="@string/description_editText"/>
+            tools:layout_editor_absoluteX="16dp" />
+
+        <EditText
+            android:id="@+id/sum_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/normalMargin"
+            app:layout_constraintBottom_toTopOf="@+id/addingInBase_button"
+            tools:layout_editor_absoluteX="8dp"
+            android:hint="@string/enter_sum"
+            android:inputType="number"
+            android:singleLine="true"/>
 
         <Button
             android:text="@string/addingNewMoneyMove_text"
