--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,10 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+
+    <color name="grayLight">#878787</color>
+    <color name="grayNormal">#5C5C5C</color>
+    <color name="grayHard">#555555</color>
     <color name="white">#FFFFFFFF</color>
     <color name="redColor">#DF4E4E</color>
     <color name="greenColor">#73DC77</color>
