--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,20 +36,23 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/addNewMovingMoney_button"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        tools:listitem="@layout/money_item"/>
+        tools:listitem="@layout/money_item" />
 
-    <Button
-        android:text="@string/addNewMovingMoney_text"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addNewMovingMoney_button"
-        style="@style/MainButtons"
-        android:layout_width="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_edit_24"
+        style="@style/MainButtons"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
