--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.HomeBuch" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/grayNormal</item>
-        <item name="colorPrimaryVariant">@color/grayHard</item>
-        <item name="colorOnPrimary">@color/grayLight</item>
+        <item name="colorPrimary">@color/grayLight</item>
+        <item name="colorPrimaryVariant">@color/grayNormal</item>
+        <item name="colorOnPrimary">@color/grayHard</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/grayNormal</item>
+        <item name="colorSecondaryVariant">@color/grayHard</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
