--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
     <Button
         android:id="@+id/reportsButton"
         android:textSize="@dimen/H2"
+        android:layout_margin="@dimen/doubleMargin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/reports_buttonText"
