--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,4 +24,19 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+
+    <style name="MainStatisticsArea">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/normalMargin</item>
+    </style>
+
+    <style name="MainStatisticsRow_text">
+        <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="MainStatisticsRow_value">
+        <item name="android:layout_weight">7</item>
+
+    </style>
 </resources>
