--- a/app/src/main/res/layout/money_per_last_month.xml
+++ b/app/src/main/res/layout/money_per_last_month.xml
@@ -4,10 +4,9 @@
     style="@style/MainStatisticsArea"
     tools:ignore="MissingConstraints">
 
-    <TableRow android:gravity="center">
-
-        <TextView android:text="@string/header_at_last_30_days" />
-    </TableRow>
+    <TextView
+        android:gravity="center"
+        android:text="@string/header_at_last_30_days" />
 
     <TableRow>
 
@@ -16,7 +15,7 @@
             android:text="@string/incomingMoney_text" />
 
         <TextView
-            android:id="@+id/incomingMoney24hour_value"
+            android:id="@+id/incomingMoneyPerLastMonth_value"
             style="@style/MainStatisticsRow_value"
             android:text="0" />
     </TableRow>
@@ -28,7 +27,7 @@
             android:text="@string/costMoney_text" />
 
         <TextView
-            android:id="@+id/costsMoney24hour_value"
+            android:id="@+id/costsMoneyPerLastMonth_value"
             style="@style/MainStatisticsRow_value"
             android:text="0" />
     </TableRow>
@@ -40,7 +39,7 @@
             android:text="@string/balance_text" />
 
         <TextView
-            android:id="@+id/totalMoney24hour_value"
+            android:id="@+id/totalMoneyBalancePerLastMonth_value"
             style="@style/MainStatisticsRow_value"
             android:text="0" />
     </TableRow>
