--- a/app/src/main/res/layout/fragment_first_start.xml
+++ b/app/src/main/res/layout/fragment_first_start.xml
@@ -15,7 +15,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Hello"
+        android:text="@string/hello"
         android:textSize="40sp"/>
 
     <EditText
