--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -19,4 +19,10 @@
         android:icon="@drawable/ic_costs"
         app:showAsAction="ifRoom"/>
 
+    <item
+        android:id="@+id/statistics_menu_item"
+        android:title="@string/statistics"
+        android:icon="@drawable/ic_info"
+        app:showAsAction="ifRoom"/>
+
 </menu>
