--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.HomeBuch" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.HomeBuch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/grayLight</item>
-        <item name="colorPrimaryVariant">@color/grayNormal</item>
-        <item name="colorOnPrimary">@color/grayHard</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/grayHard</item>
+        <item name="colorOnPrimary">@color/grayLight</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/grayNormal</item>
         <item name="colorSecondaryVariant">@color/grayHard</item>
