--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.HomeBuch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.HomeBuch" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimary">@color/green_night</item>
         <item name="colorPrimaryVariant">@color/grayHard</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
