--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.HomeBuch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.HomeBuch" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimary">@color/green_day</item>
         <item name="colorPrimaryVariant">@color/grayHard</item>
         <item name="colorOnPrimary">@color/grayLight</item>
         <!-- Secondary brand color. -->
