--- a/app/src/main/res/layout/fragment_update_money_moving.xml
+++ b/app/src/main/res/layout/fragment_update_money_moving.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style=""
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style=""
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.UpdateMoneyMovingFragment">
 
     <TextView
@@ -19,41 +19,33 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <RadioGroup
+        android:id="@+id/radio_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/textViewHeader">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/textViewHeader"
+        tools:ignore="UselessParent"
+        android:layout_margin="@dimen/doubleMargin">
 
-        <RadioGroup
-            android:layout_width="match_parent"
+        <RadioButton
+            android:id="@+id/umm_income_rb"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent">
+            android:layout_weight="1"
+            android:text="@string/receipt_transactions"
+            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
+            app:layout_constraintTop_toTopOf="@id/linearLayout2" />
 
-            <RadioButton
-                android:id="@+id/umm_income_rb"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/tripleMargin"
-                android:layout_marginTop="@dimen/doubleMargin"
-                android:layout_weight="1"
-                android:text="@string/receipt_transactions"
-                app:layout_constraintStart_toStartOf="@+id/linearLayout2"
-                app:layout_constraintTop_toTopOf="@id/linearLayout2" />
-
-            <RadioButton
-                android:id="@+id/umm_costs_rb"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/doubleMargin"
-                android:layout_weight="1"
-                android:text="@string/expenditure_operations"
-                app:layout_constraintStart_toEndOf="@+id/incomingMoney_radio"
-                app:layout_constraintTop_toTopOf="@id/linearLayout2" />
-        </RadioGroup>
-
-    </LinearLayout>
+        <RadioButton
+            android:id="@+id/umm_costs_rb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/expenditure_operations"
+            app:layout_constraintStart_toEndOf="@+id/incomingMoney_radio"
+            app:layout_constraintTop_toTopOf="@id/linearLayout2" />
+    </RadioGroup>
 
     <TextView
         android:id="@+id/textView2"
@@ -62,50 +54,40 @@
         android:gravity="center"
         android:text="@string/description_text"
         android:textSize="@dimen/H2"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/radio_group"
+        android:layout_margin="@dimen/doubleMargin" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <EditText
+        android:id="@+id/umm_description_et"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="0dp">
+        android:layout_height="200dp"
+        android:layout_margin="@dimen/doubleMargin"
+        android:gravity="start"
+        android:hint="@string/description_editText"
+        android:importantForAutofill="no"
+        android:inputType="text"
+        android:padding="@dimen/doubleMargin"
+        app:layout_constraintTop_toBottomOf="@id/textView2"/>
 
-        <EditText
-            android:id="@+id/umm_description_et"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_margin="@dimen/doubleMargin"
-            android:gravity="start"
-            android:hint="@string/description_editText"
-            android:padding="@dimen/doubleMargin"
-            app:layout_constraintBottom_toTopOf="@+id/umm_sum_et"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="16dp"
-            android:inputType="text"
-            android:importantForAutofill="no" />
+    <EditText
+        android:id="@+id/umm_sum_et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/doubleMargin"
+        android:hint="@string/enter_sum"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
+        android:maxLength="10"
+        android:singleLine="true"
+        app:layout_constraintTop_toBottomOf="@+id/umm_description_et" />
 
-        <EditText
-            android:id="@+id/umm_sum_et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/normalMargin"
-            app:layout_constraintBottom_toTopOf="@+id/umm_update_btn"
-            tools:layout_editor_absoluteX="8dp"
-            android:hint="@string/enter_sum"
-            android:inputType="numberDecimal"
-            android:singleLine="true"
-            android:importantForAutofill="no" />
+    <Button
+        android:id="@+id/umm_update_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/doubleMargin"
+        android:text="@string/update"
+        app:layout_constraintTop_toBottomOf="@+id/umm_sum_et" />
 
-        <Button
-            android:text="@string/update"
-            android:id="@+id/umm_update_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="@dimen/doubleMargin"
-            android:layout_marginEnd="@dimen/doubleMargin"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
